fixed grid spacing bug

--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@ h1 {
 }
 
 .grid-container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     width: 800px;
-    gap: 0px;
+    height: 800px;
+    box-sizing: border-box;
     justify-content: center;
     align-items: center;
     margin-top:20px;
@@ -37,6 +37,7 @@ h1 {
     height: 50px;
     background-color: coral;
     border: 1px solid pink;
+    box-sizing: border-box;
 }
 
 .button-container {
